<resources>
    <string name="app_name">Android Learing</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_intent_implicit">implicit intent 学习</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="btn_dial">拨打电话</string>
    <string name="btn_local">打开地图</string>
    <string name="btn_web">浏览网页</string>
    <string name="btn_email">发送邮件</string>
    <string name="btn_choose">自定义选择</string>
    <string name="title_activity_intent_result">IntentResutlActivity</string>
    <string name="et_phone_number">请输入手机号码</string>
    <string name="btn_choose_contact">选择联系人</string>
    <string name="btn_intent_result">带结果的Intent 学习</string>
    <string name="title_activity_simple_camera">SimpleCameraActivity</string>
    <string name="btn_simple_camera_preview">获取缩略图</string>
    <string name="btn_go_simple_camera">拍照学习</string>
    <string name="no_found_camera">未发现照相设备</string>
    <string name="btn_simple_camera_save">保存图片</string>
    <string name="btn_save_to_gallery">保存到相册</string>
    <string name="success_to_save">保存数据成功</string>
    <string name="btn_learn_vedio">录像学习</string>
    <string name="title_activity_learn_vedio">学习录像</string>
    <string name="btn_video_capture">拍摄</string>
</resources>
