<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btn_simple_camera_preview"
        android:text="@string/btn_simple_camera_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="invokeCamera2Preview"
        />

    <Button
        android:id="@+id/btn_simple_camera_save"
        android:text="@string/btn_simple_camera_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="invokeCamera2Save"
        />

    <Button
        android:id="@+id/btn_save_to_gallery"
        android:text="@string/btn_save_to_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="invokeCameraAndSave2Gallery"
        />

</LinearLayout>
